# send-to-kindle-github-action

./: .gitignore  README.md  action.yml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: vault-workflow.yml
scripts/: write_action_config.py
src/send_to_kindle/: __init__.py  articles.py  base_filters.py  cli.py  config.py  epub.py  kindle.py  markdown.py  sources.py  state.py
tests/: test_smoke.py
